# quake3-parser

./: .coveragerc  .env-sample  .gitignore  .ruff.toml  Dockerfile  Makefile  README.md  clear-hidden-files.sh  docker-compose.yml  pyproject.toml
.docker/: Dockerfile.dev
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: analysis.yaml
app/: __init__.py  app_builder.py  main.py
app/quake3/application/import_log_file/: import_log_file.py  import_log_file_in.py  import_log_file_out.py
app/quake3/domain/model/: death_means.py  game.py  player.py  settings.py  teams.py
app/quake3/infra/: q3_connect_player_parser.py  q3_create_game_parser.py  q3_event_checker_parser.py  q3_kill_parser.py  q3_parser.py
app/quake3/ui/routes/: import_log_file_route.py
app/shared/: aggregate_root.py
app/shared/config/: gunicorn.py  start_load_routes.py
app/shared/services/: default_presenter.py
tests/: conftest.py
tests/domain/model/: game_test.py
